--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
     "clsx": "^2.0.0",
-    "next": "13.4.12",
-    "postcss": "8.4.27",
+    "next": "^15.2.0",
+    "postcss": "^8.5.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
