--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "postcss": "^8.5.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "schema-dts": "^1.1.5",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   },
